# database-wrapper

./: .gitignore  CMakeLists.txt  README.md
docs/: lib.md
include/: avl.hpp  common.hpp  error.hpp  hashtable.h  heap.hpp  server.hpp  socket.hpp  thread_pool.hpp  zset.hpp
lib/: CMakeLists.txt  README.md
lib/src/: avl.cc  hashtable.cc  heap.cc  server.cc  thread_pool.cc  zset.cc
src/: Hashtable.cpp  client.cpp  error.cpp  server.cpp  servidoor.cpp  thread_pool.cpp  wrapper.cpp
tests/: CMAKELists.txt  CMakeLists.txt
tests/changes/: byteHandler.hpp  client.cpp  server.cpp
